{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 206,
  "lineage": "e86646c0-8b28-f20a-0245-24a92e167b7c",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Grafana_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-029bdee89471523f0",
            "arn": "arn:aws:ec2:us-east-1:568170370118:instance/i-06252118db651972e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06252118db651972e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "postgreskey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0053f261427efaf39",
            "private_dns": "ip-10-0-0-194.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.194",
            "public_dns": "ec2-44-215-110-25.compute-1.amazonaws.com",
            "public_ip": "44.215.110.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0263afdbd022f4035",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c8009a173e3754a0",
            "tags": {
              "Name": "Grafana server"
            },
            "tags_all": {
              "Name": "Grafana server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e9e9caa68ffda551"
            ]
          },
          "dependencies": [
            "module.ec2.data.aws_ami.ubuntu",
            "module.securitygroup.aws_security_group.Grafana_security_group",
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Nexus_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03c951bbe993ea087",
            "arn": "arn:aws:ec2:us-east-1:568170370118:instance/i-07693649412a35ff9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07693649412a35ff9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "postgreskey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01832f97aead6ef6c",
            "private_dns": "ip-10-0-0-32.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.32",
            "public_dns": "ec2-44-222-164-51.compute-1.amazonaws.com",
            "public_ip": "44.222.164.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ba3265798fb32014",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c8009a173e3754a0",
            "tags": {
              "Name": "Nexus server"
            },
            "tags_all": {
              "Name": "Nexus server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c933c912057e4fb6"
            ]
          },
          "dependencies": [
            "module.ec2.data.aws_ami.amazon_linux_2",
            "module.securitygroup.aws_security_group.Nexus_security_group",
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Prometheus_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03c951bbe993ea087",
            "arn": "arn:aws:ec2:us-east-1:568170370118:instance/i-0212b4ec1d90706c9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "jenkins-cicd-server-role",
            "id": "i-0212b4ec1d90706c9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "postgreskey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-034fcead74e40ff2e",
            "private_dns": "ip-10-0-1-242.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.242",
            "public_dns": "ec2-3-88-109-180.compute-1.amazonaws.com",
            "public_ip": "3.88.109.180",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06dcca87c03dc4dd3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0126899d12e8af7a5",
            "tags": {
              "Name": "Prometheus server"
            },
            "tags_all": {
              "Name": "Prometheus server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-048c7107408cf7132"
            ]
          },
          "dependencies": [
            "module.ec2.data.aws_ami.amazon_linux_2",
            "module.securitygroup.aws_security_group.Prometheus_security_group",
            "module.vpc.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "SonaQube_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-029bdee89471523f0",
            "arn": "arn:aws:ec2:us-east-1:568170370118:instance/i-0a70e43067e2237f3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a70e43067e2237f3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "postgreskey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09fc2deb2d4d3dffb",
            "private_dns": "ip-10-0-1-80.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.80",
            "public_dns": "ec2-52-205-218-53.compute-1.amazonaws.com",
            "public_ip": "52.205.218.53",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0eca903096f731f2c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0126899d12e8af7a5",
            "tags": {
              "Name": "SonaQube server"
            },
            "tags_all": {
              "Name": "SonaQube server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e076c2b006757c8f"
            ]
          },
          "dependencies": [
            "module.ec2.data.aws_ami.ubuntu",
            "module.securitygroup.aws_security_group.SonaQube_security_group",
            "module.vpc.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03c951bbe993ea087",
            "arn": "arn:aws:ec2:us-east-1:568170370118:instance/i-05e9e1b3dedb4fd9c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05e9e1b3dedb4fd9c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "postgreskey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e84fb1d8de39540d",
            "private_dns": "ip-10-0-1-236.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.236",
            "public_dns": "ec2-44-203-70-131.compute-1.amazonaws.com",
            "public_ip": "44.203.70.131",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06a0a50667feb830e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0126899d12e8af7a5",
            "tags": {
              "Name": "jenkins server"
            },
            "tags_all": {
              "Name": "jenkins server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f4707a9bf2d8c18c"
            ]
          },
          "dependencies": [
            "module.ec2.data.aws_ami.amazon_linux_2",
            "module.securitygroup.aws_security_group.jenkins_security_group",
            "module.vpc.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "main_network_interface-Grafana",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568170370118:network-interface/eni-09e08624d083e771f",
            "id": "eni-09e08624d083e771f",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:96:e7:25:f2:b5",
            "owner_id": "568170370118",
            "private_dns_name": "ip-10-0-0-149.ec2.internal",
            "private_ip": "10.0.0.149",
            "private_ip_list": [
              "10.0.0.149"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.0.149"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-05851a9d06f074201"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c8009a173e3754a0",
            "tags": {
              "Name": "Grafana_network_interface"
            },
            "tags_all": {
              "Name": "Grafana_network_interface"
            }
          },
          "dependencies": [
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "main_network_interface-Nexus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568170370118:network-interface/eni-04e42ab13acaab72a",
            "id": "eni-04e42ab13acaab72a",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:53:7e:ea:2a:5f",
            "owner_id": "568170370118",
            "private_dns_name": "ip-10-0-0-104.ec2.internal",
            "private_ip": "10.0.0.104",
            "private_ip_list": [
              "10.0.0.104"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.0.104"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-05851a9d06f074201"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c8009a173e3754a0",
            "tags": {
              "Name": "Nexus_network_interface"
            },
            "tags_all": {
              "Name": "Nexus_network_interface"
            }
          },
          "dependencies": [
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "main_network_interface-Prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568170370118:network-interface/eni-04b091e7fb9712d15",
            "id": "eni-04b091e7fb9712d15",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:1d:19:b1:b2:31",
            "owner_id": "568170370118",
            "private_dns_name": "ip-10-0-1-19.ec2.internal",
            "private_ip": "10.0.1.19",
            "private_ip_list": [
              "10.0.1.19"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.19"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-05851a9d06f074201"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0126899d12e8af7a5",
            "tags": {
              "Name": "Prometheus_network_interface"
            },
            "tags_all": {
              "Name": "Prometheus_network_interface"
            }
          },
          "dependencies": [
            "module.vpc.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "main_network_interface-SonaQube",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568170370118:network-interface/eni-025d67e610e5d8e93",
            "id": "eni-025d67e610e5d8e93",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:82:e7:78:c1:3f",
            "owner_id": "568170370118",
            "private_dns_name": "ip-10-0-1-12.ec2.internal",
            "private_ip": "10.0.1.12",
            "private_ip_list": [
              "10.0.1.12"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.12"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-05851a9d06f074201"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0126899d12e8af7a5",
            "tags": {
              "Name": "SonaQube_network_interface"
            },
            "tags_all": {
              "Name": "SonaQube_network_interface"
            }
          },
          "dependencies": [
            "module.vpc.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "main_network_interface-jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568170370118:network-interface/eni-036777a6bf3ec477d",
            "id": "eni-036777a6bf3ec477d",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:34:1f:e2:22:d7",
            "owner_id": "568170370118",
            "private_dns_name": "ip-10-0-1-206.ec2.internal",
            "private_ip": "10.0.1.206",
            "private_ip_list": [
              "10.0.1.206"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.206"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-05851a9d06f074201"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0126899d12e8af7a5",
            "tags": {
              "Name": "jenkins_network_interface"
            },
            "tags_all": {
              "Name": "jenkins_network_interface"
            }
          },
          "dependencies": [
            "module.vpc.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.natgateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_for_nat_gateway_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e98d1d0fd07baca0",
            "domain": "vpc",
            "id": "eipalloc-0e98d1d0fd07baca0",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-204-143-14.compute-1.amazonaws.com",
            "public_ip": "54.204.143.14",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat gateway az1 eip"
            },
            "tags_all": {
              "Name": "nat gateway az1 eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.natgateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_for_nat_gateway_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-098cad273ef503990",
            "domain": "vpc",
            "id": "eipalloc-098cad273ef503990",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-94-244-31.compute-1.amazonaws.com",
            "public_ip": "3.94.244.31",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat gateway az2 eip"
            },
            "tags_all": {
              "Name": "nat gateway az2 eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.natgateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e98d1d0fd07baca0",
            "association_id": "eipassoc-0d75a383d0f0c4125",
            "connectivity_type": "public",
            "id": "nat-03d6175f3f9b57d32",
            "network_interface_id": "eni-0050ee86684410630",
            "private_ip": "10.0.0.179",
            "public_ip": "54.204.143.14",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c8009a173e3754a0",
            "tags": {
              "Name": "nat gateway az1"
            },
            "tags_all": {
              "Name": "nat gateway az1"
            }
          },
          "dependencies": [
            "module.natgateway.aws_eip.eip_for_nat_gateway_az1",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.natgateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-098cad273ef503990",
            "association_id": "eipassoc-06792c3821b603b8d",
            "connectivity_type": "public",
            "id": "nat-07c15aff6fba5ccc5",
            "network_interface_id": "eni-0565dfae6585cb4cb",
            "private_ip": "10.0.1.43",
            "public_ip": "3.94.244.31",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0126899d12e8af7a5",
            "tags": {
              "Name": "nat gateway az2"
            },
            "tags_all": {
              "Name": "nat gateway az2"
            }
          },
          "dependencies": [
            "module.natgateway.aws_eip.eip_for_nat_gateway_az2",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Grafana_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568170370118:security-group/sg-0e9e9caa68ffda551",
            "description": "enable Grafana access on port 9090",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e9e9caa68ffda551",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Grafana access",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Grafana security group",
            "name_prefix": "",
            "owner_id": "568170370118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Grafana security group"
            },
            "tags_all": {
              "Name": "Grafana security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4425593995c6ab4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Nexus_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568170370118:security-group/sg-0c933c912057e4fb6",
            "description": "enable http/https access on port 8081/9100",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c933c912057e4fb6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "maven access",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "nexus access",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Nexus security group",
            "name_prefix": "",
            "owner_id": "568170370118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Nexus security group"
            },
            "tags_all": {
              "Name": "Nexus security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4425593995c6ab4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Prometheus_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568170370118:security-group/sg-048c7107408cf7132",
            "description": "enable Prometheus access on port 9090",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-048c7107408cf7132",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Prometheus access",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Prometheus security group",
            "name_prefix": "",
            "owner_id": "568170370118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Prometheus security group"
            },
            "tags_all": {
              "Name": "Prometheus security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4425593995c6ab4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SonaQube_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568170370118:security-group/sg-0e076c2b006757c8f",
            "description": "enable ssh and access on port 22 and 9000",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e076c2b006757c8f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Sonaqube access",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "maven access",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SonaQube security group",
            "name_prefix": "",
            "owner_id": "568170370118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SonaQube security group"
            },
            "tags_all": {
              "Name": "SonaQube security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4425593995c6ab4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568170370118:security-group/sg-0f4707a9bf2d8c18c",
            "description": "enable jenkins/maven access on port 8080/ 9100",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f4707a9bf2d8c18c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "jenkins access",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "maven access",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "alb security group",
            "name_prefix": "",
            "owner_id": "568170370118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins security group"
            },
            "tags_all": {
              "Name": "jenkins security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4425593995c6ab4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568170370118:security-group/sg-00f95ce35a5cb99ad",
            "description": "enable http/https access on port 80/443 via alb sg and access on port 22 via ssh sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00f95ce35a5cb99ad",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS Access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "jenkins access",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "maven access",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "webserver security group",
            "name_prefix": "",
            "owner_id": "568170370118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webserver security group"
            },
            "tags_all": {
              "Name": "webserver security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4425593995c6ab4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568170370118:internet-gateway/igw-0625bd7e77cb01cdb",
            "id": "igw-0625bd7e77cb01cdb",
            "owner_id": "568170370118",
            "tags": {
              "Name": "CICDPIPELINE-igw"
            },
            "tags_all": {
              "Name": "CICDPIPELINE-igw"
            },
            "vpc_id": "vpc-0b4425593995c6ab4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568170370118:route-table/rtb-0b011527c80f43a25",
            "id": "rtb-0b011527c80f43a25",
            "owner_id": "568170370118",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0625bd7e77cb01cdb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "CICDPIPELINE-public-route-table"
            },
            "tags_all": {
              "Name": "CICDPIPELINE-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4425593995c6ab4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088ab0e0cb34e92bd",
            "route_table_id": "rtb-0b011527c80f43a25",
            "subnet_id": "subnet-0126899d12e8af7a5"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_az1_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0420e4c05e4f17fce",
            "route_table_id": "rtb-0b011527c80f43a25",
            "subnet_id": "subnet-0c8009a173e3754a0"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568170370118:subnet/subnet-0c8009a173e3754a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8009a173e3754a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "568170370118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CICDPIPELINE-public-subnet-az1"
            },
            "tags_all": {
              "Name": "CICDPIPELINE-public-subnet-az1"
            },
            "vpc_id": "vpc-0b4425593995c6ab4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568170370118:subnet/subnet-0126899d12e8af7a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0126899d12e8af7a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "568170370118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CICDPIPELINE-public-subnet-az2"
            },
            "tags_all": {
              "Name": "CICDPIPELINE-public-subnet-az2"
            },
            "vpc_id": "vpc-0b4425593995c6ab4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568170370118:vpc/vpc-0b4425593995c6ab4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00a454b01b4ee4bd8",
            "default_route_table_id": "rtb-09b26dfa00aa0da03",
            "default_security_group_id": "sg-05851a9d06f074201",
            "dhcp_options_id": "dopt-0058a1d7b5a91d15a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b4425593995c6ab4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09b26dfa00aa0da03",
            "owner_id": "568170370118",
            "tags": {
              "Name": "CICDPIPELINE-vpc"
            },
            "tags_all": {
              "Name": "CICDPIPELINE-vpc"
            }
          }
        }
      ]
    }
  ]
}